Fix mobile overflow

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -5,6 +5,8 @@ html {
 }
 body {
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 article,
 aside,
